# aero-zone-guard

./: .gitignore  AeroZoneGuard.sln  DEPLOY.md  README.md  ZoneGuardLabs.sln
AeroZoneGuard.Server/: AeroZoneGuard.Server.csproj  AeroZoneGuard.Server.http  Program.cs  WeatherForecast.cs
ZoneGuardLabs.Server/: Program.cs  WeatherForecast.cs  ZoneGuardLabs.Server.csproj  ZoneGuardLabs.Server.http
aerozoneguard.client/: ESLINT.md  README.md  aerozoneguard.client.esproj  angular.json  package-lock.json  package.json
backend/: .env.example  .gitignore  AeroZoneGuard.Server.csproj  Program.cs  README.md  alembic.ini  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/App/Controllers/: UserController.py
backend/App/Models/: User.py  UserDTO.py
backend/Core/: Controller.py  Model.py  View.py
backend/Interfaces/: IRepository.cs  ISubmissionDocumentRepository.cs
backend/Models/: SubmissionDocument.Properties.cs
backend/Properties/: launchSettings.json
backend/Repositories/: SubmissionDocumentRepository.cs
backend/api/: users.py
backend/api/utils/: users.py
backend/db/: db_setup.py
backend/db/alembic/: env.py
backend/db/alembic/data/: users.json
backend/db/alembic/versions/: 5b571438073a_.py  9c99a6550654_moving_is_active_to_user_table.py  cad488f68123_initial_db_setup.py
backend/db/models/: mixins.py  user.py
backend/pydantic_schemas/: user.py
backend/src/: main.ts
docs/: 01-System-Vision-Document.md  02-Requirements-and-User-Stories.md  03-Subsystems-and-Packages.md  04-Domain-Classes.md  05-Use-Cases-List.md  (+2 more)
(+50 files in other folders)
