[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Geziel Carvalho <geziel.natal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
